# discordpybot_template

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
template_bot/: template_bot.py
template_bot/cogs/: error_handling.py  ping.py
template_bot/utils/: config_manager.py
