[tool.poetry]
name = "discordpybot_template"
version = "0.1.0"
description = "A template for Discord.py bots, with some utils I like for my bots"
authors = ["connorhsm <connorhsmith@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
